fix: dropdown was behind some components, added z-index

--- a/src/beheer-header/beheer-header.scss
+++ b/src/beheer-header/beheer-header.scss
@@ -79,8 +79,11 @@ beheer-header {
 
       .dropdown {
         position: relative;
+        z-index: 20;
+
         display: flex;
         align-items: center;
+
         margin: 0;
         height: 100%;
 
